--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
 asgiref==3.5.2
+backports.zoneinfo==0.2.1
+certifi==2022.6.15.1
+charset-normalizer==2.1.1
 Django==3.2.15
 djangorestframework==3.13.1
+gunicorn==20.1.0
+idna==3.3
+psycopg2-binary==2.8.6
+python-dotenv==0.21.0
 pytz==2022.2.1
+requests==2.28.1
 sqlparse==0.4.2
+stripe==4.1.0
 typing_extensions==4.3.0
+urllib3==1.26.12
